<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UploadFileToServerWithLocation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="upload_button_audio">upload</string>
    <string name="latitude">lat</string>
    <string name="longitude">lng</string>
    <string name="radius">radius</string>
    <string name="submit">submit</string>
</resources>
